[Fix] speaker changed line on safari

--- a/src/assets/scss/sessiontable.scss
+++ b/src/assets/scss/sessiontable.scss
@@ -54,6 +54,10 @@
             font-weight: bold;
           }
 
+          .ccip-session-speakers {
+            width: 100%;
+          }
+  
           .ccip-session-speaker {
             font-size: 12pt;
           }
